--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "less-loader": "^7.1.0",
     "vue": "^2.6.12",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
